exercises/ex14/logs/build-no-prototypes-strict.log
ex14_no_prototypes.c: In function ‘print_arguments’:
ex14_no_prototypes.c:14:9: error: implicit declaration of function ‘print_letters’ [-Werror=implicit-function-declaration]
   14 |         print_letters(argv[i]);
      |         ^~~~~~~~~~~~~
ex14_no_prototypes.c: At top level:
ex14_no_prototypes.c:18:6: warning: conflicting types for ‘print_letters’; have ‘void(const char *)’
   18 | void print_letters(const char arg[])
      |      ^~~~~~~~~~~~~
ex14_no_prototypes.c:14:9: note: previous implicit declaration of ‘print_letters’ with type ‘void(const char *)’
   14 |         print_letters(argv[i]);
      |         ^~~~~~~~~~~~~
ex14_no_prototypes.c: In function ‘print_letters’:
ex14_no_prototypes.c:30:13: error: implicit declaration of function ‘can_print_it’ [-Werror=implicit-function-declaration]
   30 |         if (can_print_it(ch))
      |             ^~~~~~~~~~~~
cc1: some warnings being treated as errors
